better error message in case something goes wrong
git-svn-id: https://svn.apache.org/repos/asf/cocoon/branches/cocoon-1@1046588 13f79535-47bb-0310-9956-ffa450edef68